version/0.17/_sources/api/solver/_autosummary/settings/convergence_reports.rst.txt
:orphan:

.. _convergence_reports:

convergence_reports
===================

.. autoclass:: ansys.fluent.core.solver.settings_232.convergence_reports.convergence_reports
    :show-inheritance:

.. rubric:: Methods

========================================   ==============================

Method                                                            Summary

========================================   ==============================
:ref:`list <list>`                                        'list' command.

:ref:`list_properties <list_properties>`       'list_properties' command.

:ref:`duplicate <duplicate>`                         'duplicate' command.

========================================   ==============================

.. rubric:: Named object type

:ref:`convergence_reports_child <convergence_reports_child>`


.. rubric:: Included in:

======================================================   ===================================

Parent                                                                               Summary

======================================================   ===================================
:ref:`convergence_conditions <convergence_conditions>`       'convergence_conditions' child.

======================================================   ===================================

